<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.menu.main_menu.MainMenuFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="hu.szakdolgozat.puzzlevr.ui.menu.main_menu.MainMenuViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

        <ProgressBar
            android:id="@+id/progressBar_main"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPastel"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/button_infoscreen"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:onClick="@{() -> viewModel.openInfoScreen()}"
            android:scaleType="fitXY"
            android:src="@drawable/info_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_single"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card_multi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_button"
                android:onClick="@{() -> viewModel.startGame()}"
                android:text="@string/single_player"
                android:textColor="@color/white" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_multi"
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_single"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_button"
                android:onClick="@{()-> viewModel.searchForPeers()}"
                android:text="@string/multy_player"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/popup_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textview_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/colorPastel"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/turn_on_wifi_long" />

                <ImageView
                    android:id="@+id/button_wifi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/turn_on_wifi"
                    android:scaleType="fitXY"
                    android:src="@drawable/wifi_disabled"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/button_location"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/turn_on_location"
                    android:scaleType="fitXY"
                    android:src="@drawable/location_disabled"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>